--- a/style/index.css
+++ b/style/index.css
@@ -1,6 +1,6 @@
 .container {
-  display: grid;
-  grid-template-rows: 90px 1fr;
+  display: flex;
+  flex-direction: column;
 }
 
 .header{
@@ -32,6 +32,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 .empty-task {
@@ -50,7 +51,7 @@
 .add-btn {
   position: fixed;
   bottom: 4%;
-  right: 16%;
+  right: 13%;
 }
 
 .add-btn .icon{
@@ -87,6 +88,7 @@
   border-radius: 24px;
   color: #fff;
   margin-top: 30px;
+  word-break: break-word;
 }
 
 .circle-container {
@@ -222,8 +224,8 @@ main .categories {
 
 .categories div {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   font-weight: 600;
   padding: 8px 20px;
   border-radius: 15px;
@@ -394,6 +396,7 @@ main .categories {
   row-gap: 10px;
   margin-top: 10px;
   flex-wrap: wrap;
+  word-break: break-word;
 }
 
 .task-categories .category-emoji {
@@ -768,9 +771,24 @@ span.highlighted-text {
 
 
 
+@media only screen and (max-width: 1019px) {
+  .add-btn {
+    right: 4%;
+  }
+  .task-options {
+    right: 50px;
+  }
+}
+
+@media only screen and (max-width: 945px) {
+  .add-btn {
+    right: 3%;
+  }
+}
+
 @media only screen and (max-width: 760px) {
   .add-btn {
-    display: none;
+    display: none!important;
   }
   .progress {
     width: 100%;
@@ -789,21 +807,172 @@ span.highlighted-text {
   }
 }
 
-@media only screen and (max-width: 440px) {
+@media only screen and (max-width: 500px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .message h2 img {
+    width: 20px;
+    margin-right: 1px;
+  }
+  .message h2 {
+    font-size: 17px;
+  }
+  .message .quote {
+    font-size: 12px;
+  }
+  .user div {
+    background-color: rgb(116, 116, 116);
+    width: 40px;
+    height: 40px;
+  }
+  .user-icon {
+    font-size: 16px;
+  }
+
+  .progress {
+    padding: 16px 14px;
+  }
+  .progress .number {
+    font-size: 15px;
+  }
+  .progress .details h3, .progress .details p {
+    font-size: 14px;
+  }
+
+  .search-bar input, .search-bar input::placeholder {
+    font-size: 14px;
+  }
+  .search-bar i.fa-search {
+    font-size: 15px;
+  }
+
+  .categories .category-emoji {
+    font-size: 14px;
+  }
+  .categories .category-nm {
+    font-size: 12px;
+  } 
+  .categories div {
+    padding: 5px 13px;
+    border-radius: 15px;
+    align-items: normal;
+  }
+
+  .task .pinned {
+    font-size: 12px;
+  }
+  .task .top-left h3 {
+    font-size: 15px;
+  }
+  .task .bottom-area p {
+    font-size: 14px;
+  }
+  .deadline .text {
+    font-size: 12px;
+  }
+  .deadline svg {
+    width: 16px;
+    font-size: 16px;
+  }
+  .task .top-right span {
+    font-size: 11px;
+  }
+  .task .options {
+    width: 30px;
+  }
+  .task .options button {
+    font-size: 12px;
+    width: 30px;
+    height: 30px;
+    margin-left: 3px;
+  }
+  .task-categories .item {
+    font-size: 11px;
+    padding: 1px 9px;
+    border-radius: 10px;
+  }
+  .task-categories .category-emoji {
+    font-size: 12px;
+    margin-right: 2px;
+  }
+  .done .check-icon i {
+    font-size: 16px;
+    padding: 18px 17px;
+    border-radius: 14px;
+  }
+  .task.done .check-icon {
+    margin-right: 12px;
+  }
+  .task {
+    padding: 19px 9px 20px 13px;
+  }
+  .task-emoji span {
+    padding: 7px 7px;
+    font-size: 26px;
+    border-radius: 12px;
+  }
+
+  .search-result {
+    font-size: 15px;
+  }
+  .search-result .empty h3 {
+    font-size: 16px;
+  }
+  .search-result .empty p {
+    font-size: 15px;
+  }
+  .empty svg {
+    width: 140px;
+    height: 280px;
+  }
+
+  .task-options .top {
+    font-size: 15px;
+  }
+  .task-options div i {
+    font-size: 15px;
+  }
+  .task-options .options div {
+    font-size: 14px;
+  }
+
   .delete-confirm {
     width: 90%;
     white-space: wrap;
+    padding: 26px 26px;
+  }
+  .delete-confirm h3{
+    font-size: 15px;
+    margin-bottom: 15px;
+  }
+  .delete-confirm .info {
+    font-size: 14px;
+    padding-bottom: 15px;
+  }
+  .delete-confirm button {
+    font-size: 12px;
+  }
+  .delete-confirm #dlt-btn i {
+    font-size: 13px;
+    margin-right: 6px;
+  }
+  .delete-confirm .btns {
+    margin-top: 15px;
+  }
+
+  .popup i {
+    font-size: 16px;
+  }
+  .popup .msg {
+    font-size: 13px;
+  }
+  .popup .msg-area {
+    padding: 17px;
+    border-radius: 16px;
+    width: 75%;
+    margin: 0 auto;
   }
 }
 
-@media only screen and (max-width: 350px) {
-  .categories .category-emoji {
-    font-size: 16px;
-  }
-  .categories .category-nm {
-    font-size: 14px;
-  } 
-  .categories div {
-    padding: 7px 16px;
-  }
-}
