--- a/style/edit-task.css
+++ b/style/edit-task.css
@@ -2,11 +2,11 @@
   position: fixed;
   z-index: 12;
   left: 50%;
-  transform: translateX(-50%);
+  top: 50%;
+  transform: translate(-50%, -50%);
   background-color: rgb(255, 255, 255);
   color: rgba(0, 0, 0, 0.87);
   max-height: calc(100vh - 64px);
-  margin-top: 32px;
   padding: 12px;
   border-radius: 20px;
   display: flex;
