--- a/style/index.css
+++ b/style/index.css
@@ -120,6 +120,7 @@
   left: 52%;
   transform: translate(-50%, -50%);
   font-weight: bold;
+  font-size: 14px;
 }
 
 .draw-circle {
@@ -157,21 +158,19 @@
   color: #fff;
   border: 1px solid var(--secondary-color);
   border-radius: 15px;
-  padding: 0 20px;
+  padding: 0 10px 0 20px;
   font-size: 20px;
-}
-
-.search-bar input{
-  padding: 18px 0;
 }
 
 .search-bar input {
   outline: 0;
   border: 0;
   flex: 1;
+  width: 0;
   margin: 0 10px;
   height: 100%;
   font-size: 18px;
+  padding: 18px 0;
   color: #fff;
   background-color: transparent;
 }
@@ -834,15 +833,17 @@ span.highlighted-text {
   .progress {
     padding: 16px 14px;
   }
-  .progress .number {
-    font-size: 15px;
-  }
   .progress .details h3, .progress .details p {
     font-size: 14px;
   }
 
   .search-bar input, .search-bar input::placeholder {
     font-size: 14px;
+  }
+  .search-bar button {
+    font-size: 17px;
+    width: 32px;
+    height: 32px;
   }
   .search-bar i.fa-search {
     font-size: 15px;
