--- a/style/add-task.css
+++ b/style/add-task.css
@@ -637,22 +637,109 @@ span.selected-emoji {
   }
 }
 
-@media only screen and (max-width: 379px) {
+@media only screen and (max-width: 500px) {
   .header {
     padding: 8px 6px;
   }
   .header .text {
-    font-size: 24px;
+    font-size: 20px;
   }
   .user div {
     width: 40px;
     height: 40px;
+    margin-right: 15px;
   }
   .user i {
     font-size: 18px;
   }
   .header .angle {
     font-size: 20px;
+  }
+
+  .form .emoji {
+    margin-bottom: 10px;
+  }
+  .emoji .icon {
+    width: 80px;
+    height: 80px;
+    font-size: 40px;
+  }
+  .emoji .pen-icon {
+    width: 35px;
+    height: 35px;
+  }
+  .emoji span svg {
+    width: 20px;
+  }
+  .remove-emoji {
+    padding: 9px 17px;
+    font-size: 13px;
+  }
+  .remove-emoji svg {
+    width: 19px;
+    margin-right: 4px;
+  }
+  .emoji-picker {
+    margin-top: 15px;
+  }
+  div.picker-active {
+    width: 315px;
+  }
+
+  .input-area .label1 {
+    font-size: 11px;
+  }
+  .input-area input, .input-area textarea {
+     font-size: 13px;
+  }
+  span.nm-count, span.des-count {
+    font-size: 11px;
+  }
+  .date-time, .name, .description {
+    padding: 12px 8px;
+  }
+  .category span {
+    font-size: 13px;
+  }
+  .dropdown .selected-area li {
+    padding: 5px 10px;
+    border-radius: 15px;
+  }
+  .dropdown .select h3 {
+    font-size: 14px;
+  }
+  .dropdown .select p {
+    font-size: 12px;
+  }
+  .dropdown .select li .select-emoji {
+    font-size: 15px;
+  }
+  .dropdown .select li i {
+    font-size: 14px;
+  }
+  .dropdown .select li {
+    padding: 8px 13px;
+    border-radius: 15px
+  }
+  .color-selector .selected-color .left {
+    font-size: 14px;
+  }
+  .color-selector .selected-color .color {
+    width: 20px;
+    height: 20px;
+    border-radius: 6px;
+  }
+  .color-selector .selected-color {
+    padding: 12px 19px;
+  }
+  .select-color .color-code {
+    padding: 7px 0;
+    margin-top: 16px;
+    font-size: 14px;
+  }
+  #create-btn {
+    font-size: 19px;
+    padding: 8px 32px;
   }
 }
 
