--- a/style/task.css
+++ b/style/task.css
@@ -41,7 +41,7 @@
   margin-bottom: 130px;
 }
 
-.cart {
+.card {
   display: flex;
   flex-direction: column;
   border-radius: 32px;
@@ -85,7 +85,6 @@ table, td, tr:last-child {
 }
 
 #color span {
-  background-color: red;
   width: 20px;
   height: 20px;
   border-radius: 5px;
@@ -137,37 +136,59 @@ table, td, tr:last-child {
 
 
 @media (min-width: 768px) {
-  .cart {
+  .card {
     padding: 24px;
     width: 70%;
   }
 }
 
 @media (min-width: 1200px) {
-  .cart {
+  .card {
     width: 50%;
   }
 }
 
-@media only screen and (max-width: 329px) {
-  .heading {
-    font-size: 20px;
-  }
+@media only screen and (max-width: 500px) {
   .header {
-    padding: 8px 8px;
+    padding: 8px 6px;
   }
   .header .text {
-    font-size: 24px;
+    font-size: 20px;
   }
   .user div {
     width: 40px;
     height: 40px;
+    margin-right: 15px;
   }
   .user i {
     font-size: 18px;
   }
   .header .angle {
     font-size: 20px;
+  }
+
+  .card .heading {
+    font-size: 17px;
+  }
+
+  table th {
+    font-size: 15px;
+  }
+  table td {
+    font-size: 14px;
+  }
+  #color span {
+    width: 18px;
+    height: 18px;
+  }
+  #category li {
+    font-size: 12px;
+    padding: 4px 11px;
+    border-radius: 16px;
+  }
+  #category li .emoji {
+    font-size: 14px;
+    margin-right: 4px;
   }
 
   table #id td {
