--- a/style/categories/categories.css
+++ b/style/categories/categories.css
@@ -1,9 +1,6 @@
-@import url('../common/common.css');
-@import url('../common/header.css');
-@import url('../common/navbar.css');
 @import url('./emoji-picker.css');
 @import url('./color-picker.css');
-@import url('../common/popup.css');
+@import url('./edit-category.css');
 
 .main {
   margin-top: 120px;
