--- a/style/common/common.css
+++ b/style/common/common.css
@@ -37,6 +37,42 @@ body {
   overflow-x: hidden;
 }
 
+.loading {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading svg {
+  position: relative;
+  width: 90px;
+  height: 90px;
+  animation: loadingRotate 2s linear infinite;
+}
+
+.loading svg circle {
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke-width: 8;
+  stroke: var(--secondary-color);
+  transform: translate(5px, 5px);
+  stroke-linecap: round;
+  stroke-dasharray: 248;
+  stroke-dashoffset: 248;
+  animation: loadingAnimate 4s linear infinite;
+}
+
+#root {
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
 .main {
   width: 70%;
   margin: 0 auto;
@@ -69,6 +105,29 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--secondary-min8);
+}
+
+@keyframes loadingRotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes loadingAnimate {
+  0%, 100% {
+    stroke-dashoffset: 248;
+  }
+
+  50% {
+    stroke-dashoffset: 0;
+  }
+
+  50.1% {
+    stroke-dashoffset: 496;
+  }
 }
 
 @keyframes addAnim {
@@ -115,27 +174,20 @@ body {
   .main {
     margin-bottom: 220px;
   }
+  .loading {
+    padding-bottom: 107px;
+}
 }
 
 @media only screen and (max-width: 500px) {
+  .loading {
+    padding-bottom: 86px;
+  }
   .main {
     margin-bottom: 180px;
   }
-
-  html, body {
-    overflow: hidden;
-    height: 100%;
-  }
-
-  body {
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
-    overscroll-behavior: contain;
-    scrollbar-width: none;
-  }
-
   body::-webkit-scrollbar {
     width: 0px;
     background: transparent;
-  }
+  } 
 }
