--- a/style/common/color-picker.css
+++ b/style/common/color-picker.css
@@ -1,34 +1,33 @@
 #color-picker {
-  width: 450px;
-  border-radius: 20px;
+  width: 100%;
+  border-radius: 15px;
   border: 1px solid #ddd;
   position: relative;
-  margin-bottom: 20px;
 }
 
 #color-picker:hover {
-  border-color: rgb(34, 34, 34);
+  border-color: var(--secondary-color);
 }
 
-#color-picker .selected-clr{
+#color-picker .selected-clr {
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-weight: 600;
   cursor: pointer;
-  padding: 20px 20px;
+  padding: 15px 18px;
 }
 
-#color-picker .selected-clr .left{
+#color-picker .selected-clr .left {
   display: flex;
   align-items: center;
 }
 
 #color-picker .selected-clr .color {
-  width: 25px;
-  height: 25px;
+  width: 23px;
+  height: 23px;
   background-color: #7E30E1;
-  border-radius: 8px;
+  border-radius: 7px;
   margin-right: 8px;
 }
 
@@ -49,13 +48,13 @@
   transition: height 0.3s ease;
 }
 
-.select-clr .clr-code{
+.select-clr .clr-code {
   color: rgb(240, 240, 240);
   font-weight: 600;
   background-color: #7E30E1;
   text-align: center;
-  padding: 10px 0;
-  border-radius: 20px;
+  padding: 8px 0;
+  border-radius: 19px;
   letter-spacing: 1px;
   border: 2px solid rgba(255, 255, 255, 0.67);
   transition: background-color .5s ease;
@@ -73,8 +72,8 @@
   margin-top: 15px;
   padding: 0 20px;
   position: absolute;
-  width: auto;
   top: 75px;
+  width: auto;
 }
 
 .clr-options button {
@@ -111,7 +110,6 @@
   position: absolute;
 }
 
-
 #random-clr {
   background-color: rgb(26, 129, 255);
   position: relative;
@@ -124,13 +122,6 @@
 
 #random-clr:hover {
   box-shadow: rgb(26, 129, 255) 0px 0px 12px;
-}
-
-
-@media only screen and (max-width: 610px) {
-  #color-picker {
-    width: 80%;
-  }
 }
 
 @media only screen and (max-width: 500px) {
@@ -153,20 +144,8 @@
     margin-top: 16px;
     font-size: 14px;
   }
-  .clr-options button, #color-picker .picker span {
+  .clr-options button, #random-clr, #color-picker .picker span {
     width: 35px;
     height: 35px;
-  }
-}
-
-@media only screen and (max-width: 424px) {
-  #color-picker {
-    width: 60%;
-  }
-}
-
-@media only screen and (max-width: 323px) {
-  #color-picker {
-    width: 53%;
   }
 }
