--- a/style/index.css
+++ b/style/index.css
@@ -3,4 +3,7 @@
 @import url('./common/sidebar.css');
 @import url('./common/popup.css');
 @import url('./common/header.css');
+@import url(./common/color-picker.css);
+@import url('./common/ctgry-selector.css');
+@import url('common/emoji-picker.css');
 
