--- a/style/categories/categories.css
+++ b/style/categories/categories.css
@@ -1,5 +1,3 @@
-@import url('./emoji-picker.css');
-@import url('./color-picker.css');
 @import url('./edit-category.css');
 
 .main {
@@ -268,6 +266,9 @@ span.nm-count{
   transition: opacity 0.3s ease;
 }
 
+#color-picker {
+  margin-top: 15px;
+}
 
 @media only screen and (max-width: 500px) { 
   .main {
@@ -359,5 +360,3 @@ span.nm-count{
     width: 88%;
   }
 }
-
-
