--- a/style/home/edit-task.css
+++ b/style/home/edit-task.css
@@ -1,7 +1,3 @@
-@import url('./emoji-picker.css');
-@import url(../../common/ctgry-selector.css);
-@import url('./color-picker.css');
-
 .edit-task {
   position: fixed;
   z-index: 12;
@@ -11,10 +7,11 @@
   background-color: rgb(255, 255, 255);
   color: rgba(0, 0, 0, 0.87);
   max-height: 90%;
-  padding: 12px;
   border-radius: 20px;
+  padding: 12px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   visibility: hidden;
   opacity: 0;
   transition: opacity 0.3s ease;
@@ -38,29 +35,27 @@
   transition: opacity 0.25s ease;
 }
 
-.edit-task .header{
+.edit-header {
   font-weight: 500;
   font-size: 20px;
-  margin-left: 30px;
+  width: 100%;
+  padding: 20px 30px 20px;
 }
 
 
 .form {
-  margin-top: 30px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  row-gap: 25px;
   overflow-y: scroll;
   overflow-x: hidden;
+  padding: 0 30px 5px;
 }
 
-.input-area {
-  width: 450px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  row-gap: 25px;
+.name {
+  margin-top: -25px;
 }
 
 .date-time, .name, .description {
@@ -75,7 +70,7 @@
   border: 1px solid rgb(34, 34, 34);
 }
 
-.input-area input, .input-area textarea{
+.form input, .form textarea{
   width: 100%;
   outline: 0;
   border: 0;
@@ -86,7 +81,7 @@
   letter-spacing: 0.03em;
 }
 
-.input-area .label1 {
+.form .label1 {
   position: absolute;
   z-index: 1;
   top: -8px;
@@ -116,23 +111,12 @@ span.nm-count, span.des-count {
   letter-spacing: 0.5px;
 }
 
-#ctgry-selector {
-  width: 450px;
-}
-
 #ctgry-selector:hover {
   border-color: rgb(34, 34, 34);
 }
 
-#ctgry-selector .selected li {
-  font-size: 14px;
-  padding: 6px 13px;
-  border-radius: 20px;
-}
-
 #ctgry-selector .select {
   z-index: 13;
-  width: 450px;
 }
 
 #ctgry-selector-bg {
@@ -143,12 +127,16 @@ span.nm-count, span.des-count {
   z-index: 12;
 }
 
+#color-picker:hover {
+  border-color: rgb(34, 34, 34);
+}
+
 .edit-task .fotter {
   display: flex;
   align-items: center;
   justify-content: end;
-  height: 120px;
-  margin-top: 10px;
+  width: 100%;
+  padding: 18px 0 15px;
 }
 
 #cancel-btn, #save-btn {
@@ -181,7 +169,7 @@ span.nm-count, span.des-count {
   cursor: pointer;
 }
 
-#save-btn.active:hover {
+#save-btn.enable:hover {
   background-color: var(--secondary-min1);
 }
 
@@ -200,33 +188,17 @@ span.nm-count, span.des-count {
   background-color: #dcd6d6;
 }
 
-
-@media only screen and (max-width: 610px) {
-  .date-time, .name, .description {
-    width: 80%;
-  }
-  span.nm-count, span.des-count {
-    width: 80%;
-  }
-  .category {
-    width: 80%;
-  }
-  #ctgry-selector {
-    width: 100%;
-  }
-  #ctgry-selector .select {
-    width: 80%;
-  }
-}
-
 @media only screen and (max-width: 500px) {
-  .edit-task .header {
+  .form {
+    padding: 0 15px 5px;
+  }
+  .edit-task .edit-header {
     font-size: 16px;
   }
-  .input-area .label1 {
+  .form .label1 {
     font-size: 11px;
   }
-  .input-area input, .input-area textarea {
+  .form input, .form textarea {
      font-size: 13px;
   }
   span.nm-count, span.des-count {
@@ -243,47 +215,20 @@ span.nm-count, span.des-count {
   }
 }
 
+@media only screen and (min-width: 700px) {
+  #emoji-picker {
+    width: 80%;
+  }
+}
+
 @media only screen and (max-width: 515px) {
   .edit-task {
     width: 95% !important;
   }
 }
 
-@media only screen and (max-width: 424px) {
-  .date-time, .name, .description {
-    width: 60%;
-  }
-  span.nm-count, span.des-count {
-    width: 60%;
-  }
-  .category {
-    width: 60%;
-  }
-  #ctgry-selector {
-    width: 100%;
-  }
-  #ctgry-selector .select {
-    width: 80%;
-  }
-}
-
 @media only screen and (max-width: 323px) {
   .editTask-bg.visible {
     right: -100px;
-  }
-  .date-time, .name, .description {
-    width: 53%;
-  }
-  span.nm-count, span.des-count {
-    width: 53%;
-  }
-  .category {
-    width: 53%;
-  }
-  #ctgry-selector {
-    width: 100%;
-  }
-  #ctgry-selector .select {
-    width: 85%;
   }
 }
