--- a/style/home/home.css
+++ b/style/home/home.css
@@ -289,6 +289,7 @@ main .categories {
 .categories .x-btn {
   font-size: 20px;
   margin-left: 5px;
+  display: none;
 }
 
 .search-result {
@@ -623,7 +624,7 @@ main .categories {
   visibility: visible;
 }
 
-.blur-bg {
+.dlt-bg {
   position: absolute;
   left: 0;
   right: 0;
