--- a/style/home/home.css
+++ b/style/home/home.css
@@ -88,6 +88,7 @@
   display: none; /*block*/
   text-align: center;
   position: absolute;
+  width: 100%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -872,21 +873,23 @@ span.highlighted-text {
   .search-bar i.fa-search {
     font-size: 15px;
   }
-
+  .categories div {
+    padding: 5px 9px;
+    border-radius: 13px;
+    font-size: 13px;
+  }
   .categories .category-emoji {
     font-size: 14px;
   }
-  .categories .category-nm {
-    font-size: 12px;
-  } 
-  .categories div {
-    padding: 5px 13px;
-    border-radius: 15px;
-  }
   .categories .x-btn {
+    font-size: 14px;
+  }
+  .empty-task h3 {
     font-size: 15px;
   }
-
+  .empty-task p {
+    font-size: 14px;
+  }
   .task .pinned {
     font-size: 12px;
   }
@@ -945,10 +948,10 @@ span.highlighted-text {
     font-size: 15px;
   }
   .search-result .empty h3 {
-    font-size: 16px;
+    font-size: 15px;
   }
   .search-result .empty p {
-    font-size: 15px;
+    font-size: 14px;
   }
   .empty svg {
     width: 140px;
